# uptime-kuma-agent

./: .bumpversion.cfg  .env.example  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  a2a.json  compose.yml  debug.Dockerfile  pyproject.toml  requirements.txt
tests/: test_init.py
uptime_kuma_agent/: __init__.py  __main__.py  agent_server.py  auth.py  graph_config.py  mcp_config.json  mcp_server.py  uptime_kuma_models.py
uptime_kuma_agent/agent/: AGENTS.md  CRON.md  CRON_LOG.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md
uptime_kuma_agent/agent_data/: MCP_AGENTS.md  MEMORY.md  NODE_AGENTS.md  knowledge_graph.db  knowledge_graph.db.wal  mcp_config.json
